adjust api for entrance
