# ranker/api/v1/endpoint/api.go
@@ -4,8 +4,10 @@ import (
 	"context"
 
 	"github.com/web3eye-io/Web3Eye/nft-meta/api/v1/endpoint"
+	"github.com/web3eye-io/Web3Eye/proto/web3eye"
 	nftmetanpool "github.com/web3eye-io/Web3Eye/proto/web3eye/nftmeta/v1/endpoint"
 	rankernpool "github.com/web3eye-io/Web3Eye/proto/web3eye/ranker/v1/endpoint"
+
 	"google.golang.org/grpc"
 )
 
@@ -18,46 +20,74 @@ func Register(server grpc.ServiceRegistrar) {
 	rankernpool.RegisterManagerServer(server, &Server{})
 }
 
-func (s *Server) CreateEndpoint(ctx context.Context, in *nftmetanpool.CreateEndpointRequest) (*nftmetanpool.CreateEndpointResponse, error) {
-	return s.Server.CreateEndpoint(ctx, in)
+func (s *Server) CreateEndpoint(ctx context.Context, in *rankernpool.CreateEndpointRequest) (*rankernpool.CreateEndpointResponse, error) {
+	resp, err := s.Server.CreateEndpoint(ctx, &nftmetanpool.CreateEndpointRequest{
+		Info: &nftmetanpool.EndpointReq{
+			ChainType: &in.ChainType,
+			ChainID:   &in.ChainID,
+			Address:   &in.Address,
+		},
+	})
+	if err != nil {
+		return nil, err
+	}
+	return &rankernpool.CreateEndpointResponse{
+		Info: resp.Info,
+	}, nil
 }
 
-func (s *Server) CreateEndpoints(ctx context.Context, in *nftmetanpool.CreateEndpointsRequest) (*nftmetanpool.CreateEndpointsResponse, error) {
-	return s.Server.CreateEndpoints(ctx, in)
+func (s *Server) UpdateEndpoint(ctx context.Context, in *rankernpool.UpdateEndpointRequest) (*rankernpool.UpdateEndpointResponse, error) {
+	resp, err := s.Server.UpdateEndpoint(ctx, &nftmetanpool.UpdateEndpointRequest{
+		Info: &nftmetanpool.EndpointReq{
+			ID:      &in.ID,
+			Address: in.Address,
+			State:   in.State,
+			Remark:  in.Remark,
+		},
+	})
+	if err != nil {
+		return nil, err
+	}
+	return &rankernpool.UpdateEndpointResponse{Info: resp.Info}, nil
 }
 
-func (s *Server) UpdateEndpoint(ctx context.Context, in *nftmetanpool.UpdateEndpointRequest) (*nftmetanpool.UpdateEndpointResponse, error) {
-	return s.Server.UpdateEndpoint(ctx, in)
+func (s *Server) GetEndpoint(ctx context.Context, in *rankernpool.GetEndpointRequest) (*rankernpool.GetEndpointResponse, error) {
+	resp, err := s.Server.GetEndpoint(ctx, &nftmetanpool.GetEndpointRequest{
+		ID: in.ID,
+	})
+	if err != nil {
+		return nil, err
+	}
+	return &rankernpool.GetEndpointResponse{Info: resp.Info}, nil
 }
 
-func (s *Server) UpdateEndpoints(ctx context.Context, in *nftmetanpool.UpdateEndpointsRequest) (*nftmetanpool.UpdateEndpointsResponse, error) {
-	return s.Server.UpdateEndpoints(ctx, in)
+func (s *Server) GetEndpoints(ctx context.Context, in *rankernpool.GetEndpointsRequest) (*rankernpool.GetEndpointsResponse, error) {
+	conds := &nftmetanpool.Conds{
+		ID:        &web3eye.StringVal{Op: "eq", Value: *in.ID},
+		ChainType: &web3eye.StringVal{Op: "eq", Value: in.ChainType.String()},
+		ChainID:   &web3eye.StringVal{Op: "eq", Value: *in.ChainID},
+		Address:   &web3eye.StringVal{Op: "eq", Value: *in.Address},
+		State:     &web3eye.StringVal{Op: "eq", Value: in.State.String()},
+		Remark:    &web3eye.StringVal{Op: "eq", Value: *in.Remark},
+	}
+	resp, err := s.Server.GetEndpoints(ctx,
+		&nftmetanpool.GetEndpointsRequest{
+			Conds:  conds,
+			Offset: in.Offset,
+			Limit:  in.Limit,
+		})
+	if err != nil {
+		return nil, err
+	}
+	return &rankernpool.GetEndpointsResponse{Infos: resp.Infos}, nil
 }
 
-func (s *Server) GetEndpoint(ctx context.Context, in *nftmetanpool.GetEndpointRequest) (*nftmetanpool.GetEndpointResponse, error) {
-	return s.Server.GetEndpoint(ctx, in)
-}
-
-func (s *Server) GetEndpointOnly(ctx context.Context, in *nftmetanpool.GetEndpointOnlyRequest) (*nftmetanpool.GetEndpointOnlyResponse, error) {
-	return s.Server.GetEndpointOnly(ctx, in)
-}
-
-func (s *Server) GetEndpoints(ctx context.Context, in *nftmetanpool.GetEndpointsRequest) (*nftmetanpool.GetEndpointsResponse, error) {
-	return s.Server.GetEndpoints(ctx, in)
-}
-
-func (s *Server) ExistEndpoint(ctx context.Context, in *nftmetanpool.ExistEndpointRequest) (*nftmetanpool.ExistEndpointResponse, error) {
-	return s.Server.ExistEndpoint(ctx, in)
-}
-
-func (s *Server) ExistEndpointConds(ctx context.Context, in *nftmetanpool.ExistEndpointCondsRequest) (*nftmetanpool.ExistEndpointCondsResponse, error) {
-	return s.Server.ExistEndpointConds(ctx, in)
-}
-
-func (s *Server) CountEndpoints(ctx context.Context, in *nftmetanpool.CountEndpointsRequest) (*nftmetanpool.CountEndpointsResponse, error) {
-	return s.Server.CountEndpoints(ctx, in)
-}
-
-func (s *Server) DeleteEndpoint(ctx context.Context, in *nftmetanpool.DeleteEndpointRequest) (*nftmetanpool.DeleteEndpointResponse, error) {
-	return s.Server.DeleteEndpoint(ctx, in)
+func (s *Server) DeleteEndpoint(ctx context.Context, in *rankernpool.DeleteEndpointRequest) (*rankernpool.DeleteEndpointResponse, error) {
+	resp, err := s.Server.DeleteEndpoint(ctx, &nftmetanpool.DeleteEndpointRequest{
+		ID: in.ID,
+	})
+	if err != nil {
+		return nil, err
+	}
+	return &rankernpool.DeleteEndpointResponse{Info: resp.Info}, nil
 }
